// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmContainer page component renders correctly when film and relatedFilms are provided 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Film title
       🎥 Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls flex flex-align-center"
    >
      <div
        className="flex-grow"
      >
        <SiteName />
      </div>
      <NavigateButton
        primary={true}
        small={true}
        to="/search"
      >
        Search
      </NavigateButton>
    </div>
    <LoadingBlock
      hideText={true}
      isLoaded={true}
    >
      <FilmDetails
        film={
          Object {
            "budget": 15000000,
            "genres": Array [
              "some genre",
              "another genre",
            ],
            "id": 1,
            "overview": "Once upon a time...",
            "poster_path": "https://picsum.photos/g/300/450/?random",
            "release_date": "2018-05-04",
            "revenue": 59735548,
            "tagline": "Put that cookie down",
            "title": "Film title",
            "vote_average": 7.5,
            "vote_count": 667,
          }
        }
      />
    </LoadingBlock>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResultsPanel>
        Films by 
        Horror
         genre
      </SearchResultsPanel>
      <LoadableComponent
        films={
          Array [
            Object {
              "budget": 15000000,
              "genres": Array [
                "some genre",
                "another genre",
              ],
              "id": 1,
              "overview": "Once upon a time...",
              "poster_path": "https://picsum.photos/g/300/450/?random",
              "release_date": "2018-05-04",
              "revenue": 59735548,
              "tagline": "Put that cookie down",
              "title": "Film title",
              "vote_average": 7.5,
              "vote_count": 667,
            },
          ]
        }
      />
    </LoadingBlock>
  </main>
  <Footer />
</Fragment>
`;

exports[`FilmContainer page component renders correctly when no film found nor related films found  1`] = `
<Fragment>
  <Header>
    <div
      className="padding-controls flex flex-align-center"
    >
      <div
        className="flex-grow"
      >
        <SiteName />
      </div>
      <NavigateButton
        primary={true}
        small={true}
        to="/search"
      >
        Search
      </NavigateButton>
    </div>
    <LoadingBlock
      hideText={true}
      isLoaded={true}
    >
      <FilmDetails />
    </LoadingBlock>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResultsPanel>
        Films by 
        Horror
         genre
      </SearchResultsPanel>
    </LoadingBlock>
  </main>
  <Footer />
</Fragment>
`;

exports[`FilmContainer page component renders correctly when no related films found 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Film title
       🎥 Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls flex flex-align-center"
    >
      <div
        className="flex-grow"
      >
        <SiteName />
      </div>
      <NavigateButton
        primary={true}
        small={true}
        to="/search"
      >
        Search
      </NavigateButton>
    </div>
    <LoadingBlock
      hideText={true}
      isLoaded={true}
    >
      <FilmDetails
        film={
          Object {
            "budget": 15000000,
            "genres": Array [
              "some genre",
              "another genre",
            ],
            "id": 1,
            "overview": "Once upon a time...",
            "poster_path": "https://picsum.photos/g/300/450/?random",
            "release_date": "2018-05-04",
            "revenue": 59735548,
            "tagline": "Put that cookie down",
            "title": "Film title",
            "vote_average": 7.5,
            "vote_count": 667,
          }
        }
      />
    </LoadingBlock>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResultsPanel>
        Films by 
        Horror
         genre
      </SearchResultsPanel>
      <LoadableComponent
        className="font-size-header font-bold color-alt"
      >
        No related movies found
      </LoadableComponent>
    </LoadingBlock>
  </main>
  <Footer />
</Fragment>
`;

exports[`FilmContainer page component renders correctly when related films had failed to load 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Film title
       🎥 Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls flex flex-align-center"
    >
      <div
        className="flex-grow"
      >
        <SiteName />
      </div>
      <NavigateButton
        primary={true}
        small={true}
        to="/search"
      >
        Search
      </NavigateButton>
    </div>
    <LoadingBlock
      hideText={true}
      isLoaded={true}
    >
      <FilmDetails
        film={
          Object {
            "budget": 15000000,
            "genres": Array [
              "some genre",
              "another genre",
            ],
            "id": 1,
            "overview": "Once upon a time...",
            "poster_path": "https://picsum.photos/g/300/450/?random",
            "release_date": "2018-05-04",
            "revenue": 59735548,
            "tagline": "Put that cookie down",
            "title": "Film title",
            "vote_average": 7.5,
            "vote_count": 667,
          }
        }
      />
    </LoadingBlock>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResultsPanel>
        Films by 
        Horror
         genre
      </SearchResultsPanel>
      <LoadableComponent
        className="error-message"
      >
        Unable to load related movies
      </LoadableComponent>
    </LoadingBlock>
  </main>
  <Footer />
</Fragment>
`;

exports[`FilmContainer page component renders correctly when the film is not found 1`] = `<LoadableComponent />`;

exports[`FilmContainer page component renders correctly when the film is unavailable 1`] = `
<Fragment>
  <Header>
    <div
      className="padding-controls flex flex-align-center"
    >
      <div
        className="flex-grow"
      >
        <SiteName />
      </div>
      <NavigateButton
        primary={true}
        small={true}
        to="/search"
      >
        Search
      </NavigateButton>
    </div>
    <LoadingBlock
      hideText={true}
      isLoaded={true}
    >
      <FilmDetails />
    </LoadingBlock>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResultsPanel>
        Films by 
        Horror
         genre
      </SearchResultsPanel>
      <LoadableComponent
        films={
          Array [
            Object {
              "budget": 15000000,
              "genres": Array [
                "some genre",
                "another genre",
              ],
              "id": 1,
              "overview": "Once upon a time...",
              "poster_path": "https://picsum.photos/g/300/450/?random",
              "release_date": "2018-05-04",
              "revenue": 59735548,
              "tagline": "Put that cookie down",
              "title": "Film title",
              "vote_average": 7.5,
              "vote_count": 667,
            },
          ]
        }
      />
    </LoadingBlock>
  </main>
  <Footer />
</Fragment>
`;
